Bug 107078 - Pulseaudio 12 fails to load ladspa plugins
Summary: Pulseaudio 12 fails to load ladspa plugins
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: modules (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 107071
  Show dependency treegraph
 
Reported: 2018-06-30 14:50 UTC by megaphantomx
Modified: 2018-07-09 12:25 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
strace output (1.30 MB, text/plain)
2018-06-30 14:50 UTC, megaphantomx
Details

Description megaphantomx 2018-06-30 14:50:34 UTC
Created attachment 140396 [details]
strace output

PulseAudio 12 module-ladspa-sink fails to load ladspa plugins from default paths, like /usr/lib64/ladspa. PulseAudio 11 is good.

Running with LADSPA_PATH=/usr/lib64/ladspa or symlinking plugin to /usr/lib64/pulseaudio/ still works.

default.pa line
load-module module-ladspa-sink sink_name=tap_eq sink_master=remap plugin=tap_eq label=tap_equalizer control=5,3,1,-2,1,3,9,10,100,200,400,1000,3000,6000,12000,15000

"journalctl --user -u pulseaudio" lines
jun 24 04:10:31 Matrix pulseaudio[15208]: E: [pulseaudio] module-ladspa-sink.c: Failed to load LADSPA plugin: file not found
jun 24 04:10:31 Matrix pulseaudio[15208]: E: [pulseaudio] module.c: Failed to load module "module-ladspa-sink" (argument: "sink_name=tap_eq sink_master=remap plugin=tap_eq label=tap_equalizer control=5,3,1,-2,1,3,9,10,100,200,400,1000,3000,6000,12000,15000"): initialization failed.

$ strings /usr/lib64/pulse-11.1/modules/module-ladspa-sink.so |grep /lib64/
/usr/lib64/pulseaudio
/usr/lib64/ladspa:/usr/local/lib/ladspa:/usr/lib/ladspa:/usr/local/lib64/ladspa:/usr/lib64/ladspa

$ strings /usr/lib64/pulse-12.0/modules/module-ladspa-sink.so |grep /lib64/
/usr/lib64/pulseaudio
Comment 1 Tanu Kaskinen 2018-07-04 05:27:59 UTC
Marking as a release blocker for 13.0 (I think we should release 12.1 quickly with a fix for this, though).
Comment 2 Tanu Kaskinen 2018-07-04 12:15:22 UTC
I submitted a patch:
https://patchwork.freedesktop.org/patch/236297/
Comment 3 megaphantomx 2018-07-05 22:06:03 UTC
It's working with patch.
Comment 4 Tanu Kaskinen 2018-07-09 12:25:01 UTC
The fix is in master now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.